<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">GymWen</string>
    <string name="title" translatable="false">Gymnasium Wendelstein</string>
    <string name="subtitle">Offizielle App © Felix Hollederer</string>
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
    <string name="today">Heute</string>
    <string name="tomorrow">Morgen</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_website">Startseite</string>
    <string name="menu_mebis" translatable="false">Mebis</string>
    <string name="menu_mensa">Mensa (kitafino)</string>
    <string name="menu_category_other">Diverses</string>
    <string name="menu_category_school">Gymnasium</string>
    <string name="menu_at_one_glance">Auf einen Blick!</string>
    <string name="menu_impressum">Über</string>
    <string name="menu_update">Updates</string>
    <string name="menu_auto_update_check">Im Hintergrund prüfen</string>
    <string name="changelog">Änderungen</string>
    <string name="menu_shop">Online Shop</string>
    <string name="menu_teacher_list">Lehrerliste</string>
    <string name="menu_notes">Notizen</string>
    <string name="menu_timetable">Stundenplan</string>
    <string name="menu_grades">Notenverwaltung (Excel)</string>
    <string name="menu_days">Einzelne Tage</string>
    <string name="menu_filtered">Gefiltert</string>
    <string name="menu_unfiltered">Gesamt</string>
    <string name="menu_colorush" translatable="false">ColoRush</string>
    <string name="menu_profiles">Profile</string>
    <string name="menu_claxss" translatable="false">ClaXss</string>
    <string name="menu_call_office">Sekretariat anrufen</string>
    <string name="menu_public_transport">VGN</string>
    <string name="menu_forms">Formulare</string>
    <string name="menu_from_this_developer">Auch von diesem Entwickler</string>
    <string name="menu_news">Schülerzeitung</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Wiederherstellen</string>
    <string name="menu_podcast" translatable="false">Wendelsteiner Welle</string>
    <string name="room_plan">Raumplan</string>
    <string name="action_share">Teilen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="open_app">App öffnen</string>
    <string name="switch_design">Design ändern</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="set_substitution_title">Vertretungsplan</string>
    <string name="set_courses_title">Kurse/Klasse</string>
    <string name="set_substitution_signin">Anmeldedaten</string>
    <string name="set_substitution_username">Benutzername</string>
    <string name="set_substitution_password">Passwort</string>
    <string name="set_notification_title">Benachrichtigung</string>
    <string name="set_notification_isOn">Benachrichtigung anzeigen</string>
    <string name="set_notification_showAlways">Dauerhaft anzeigen</string>
    <string name="set_hours">Uhrzeiten statt Stunden anzeigen</string>
    <string name="set_show_borders">Umranden der Lehrerkürzel</string>
    <string name="set_show_borders_specific">Nur beim gefilterten Plan</string>
    <string name="set_miscellaneous_title">Sonstiges</string>
    <string name="set_beta_features">Beta-Features</string>
    <string name="set_old_substitution">Altes Design</string>
    <string name="set_design_title">Design</string>
    <string name="set_design_show_sections">Gefiltert \u0026 Gesamt einzeln anzeigen</string>
    <string name="set_show_weekdates">Wochentage immer anzeigen</string>
    <string name="set_parents">Elternmodus</string>
    <string name="set_two_notifications">Tage einzeln als Benachrichtigung</string>
    <string name="set_choose_theme">Generelles Design</string>
    <string name="set_theme_light">Hell</string>
    <string name="set_theme_dark">Dunkel</string>
    <string name="set_theme_black">Schwarz</string>
    <string name="set_theme_auto">Automatisch</string>
    <string name="set_full_names">Echte Namen statt Kürzel anzeigen</string>
    <string name="set_full_names_specific">Nur beim gefilterten Plan</string>
    <string name="set_today_url">URL für den ersten Tag</string>
    <string name="set_tomorrow_url">URL für den zweiten Tag</string>
    <string name="set_offline_mode">Offlinemodus</string>
    <string name="set_teacherlist_url">URL für die Lehrerliste</string>
    <string name="set_substitution_category">Vertretungsplan</string>
    <string name="set_summarize">Gleiche Stunden zusammenfassen</string>
    <string name="also_at_old_design">Auch beim alten Design</string>
    <string name="set_single_days">Tage einzeln anzeigen</string>
    <string name="set_old_title">Alte Überschrift</string>
    <string name="set_design_no_sections">Gefiltert \u0026 Gesamt zusammen anzeigen</string>
    <string name="set_swipe_to_refresh">Herunterziehen zum Aktualisieren</string>
    <string name="set_show_show_swipe_to_refresh_all">Nur beim ungefilterten Plan</string>
    <string name="set_intelligent_hide">Intelligentes Ausblenden</string>
    <string name="set_show_summary_notif_title">Zusammenfassende Benachrichtigung anzeigen</string>
    <string name="set_show_summary_usual_title">Alle Profile in der zusammenfassenden Benachrichtigung anzeigen</string>
    <string name="set_main_notif_for_all_title">Die prägnante Benachrichtigung für alle Profile senden</string>
    <string name="set_show_more">Mehr anzeigen</string>
    <string name="set_general_category">Allgemein</string>
    <string name="nothing">Keine Vertretung für dich.</string>
    <string name="nothing_for_whole_day">Keine Vertretungen an diesem Tag.</string>
    <string name="back_button">Erneut drücken zum Beenden</string>
    <string name="downloading">Lädt\u2026</string>
    <string name="footprint">Mit der GymWen App erzeugt:</string>
    <string name="noInternet">Du bist nicht mit dem Internet verbunden!</string>
    <string name="noInternetConnection">Keine Internetverbindung!</string>
    <string name="share_substitution_plan">Vertretung senden an\u2026</string>
    <string name="day_past">Vergangen</string>
    <string name="with_teacher">bei</string>
    <string name="missing_short">entf</string>
    <string name="add_to_my_courses">Zu meinen Kursen hinzufügen</string>
    <string name="remove_from_my_courses">Aus meinen Kursen entfernen</string>
    <string name="classes">Klasse</string>
    <string name="classes_short">K</string>
    <string name="courses">Kurs</string>
    <string name="courses_short">K</string>
    <string name="hours">Stunde</string>
    <string name="hours_short">h</string>
    <string name="hours_short_three">Std</string>
    <string name="subject">Fach</string>
    <string name="teacher">Lehrer</string>
    <string name="teacher_short">L</string>
    <string name="room">Raum</string>
    <string name="room_short">R</string>
    <string name="miscellaneous">Sonstiges</string>
    <string name="miscellaneous_short">Sons.</string>
    <string name="title_activity_sign_in">Anmeldung</string>
    <string name="login_failed">"Anmeldung fehlgeschlagen"</string>
    <string name="login_success">Anmeldung erfolgreich</string>
    <string name="login_sign_in">Anmelden</string>
    <string name="please_wait">Bitte warten</string>
    <string name="proofing">Anmeldedaten werden geprüft.</string>
    <string name="username_hint">Benutzername</string>
    <string name="password_hint">Passwort</string>
    <string name="login_description">Bitte geben Sie hier die Anmeldedaten des Online-Vertretungsplans ein.</string>
    <string name="title_activity_choice">Kurs-/Klassenwahl</string>
    <string name="choice_senior">Oberstufe (Q11/Q12)</string>
    <string name="choice_5">5. Klasse</string>
    <string name="choice_6">6. Klasse</string>
    <string name="choice_7">7. Klasse</string>
    <string name="choice_8">8. Klasse</string>
    <string name="choice_9">9. Klasse</string>
    <string name="choice_10">10. Klasse</string>
    <string name="choice_parents">Elternteil</string>
    <string name="choice_more_classes">Andere Klasse</string>
    <string name="choice_more_letters">Anderer Buchstabe</string>
    <string name="choice_senior_one">Jahrgang 1 (11. Klasse, bei 1d4 die 1)</string>
    <string name="choice_senior_two">Jahrgang 2 (12. Klasse, bei 2d4 die 2)</string>
    <string name="choice_more_cours_digits">Anderer Jahrgang</string>
    <string name="choice_title_4">Kurs der Pflichtfächer (Deutsch, Mathe, Geschichte, Sozialkunde)\n(z.B. bei 1d4, die 4)</string>
    <string name="set_notification_alarm">Zu einer best. Uhrzeit</string>
    <string name="color_accent">Akzentfarbe</string>
    <string name="color_primary">Hauptfarbe</string>
    <string name="set_desc_courses">Einzelne Kurse mit einem # zwischen den Kursen trennen, z.B. 1ph3#1d4#1bio2</string>
    <string name="set_desc_hours">Die Stundenanzeige durch die jeweilige Uhrzeit ersetzen, z.B. 8:10 statt 1</string>
    <string name="set_desc_week_dates">Immer den zum Datum gehörenden Wochentag anzeigen (auch wenn der Tag schon vergangen ist)</string>
    <string name="set_desc_show_full_names">Alle Lehrerkürzel durch den jeweiligen Nachnamen ersetzen</string>
    <string name="set_desc_credentials_fragment">Einstellungen für das Herunterladen des Vertretungsplans/Lehrerliste</string>
    <string name="set_desc_accentColor">Die Farbe, mit der Wichtiges hervorgehoben wird, z.B. die Stunden beim Vertretungsplan</string>
    <string name="set_desc_primaryColor">Die Farbe der Titelleiste</string>
    <string name="set_desc_menu_items_fragment">Bestimmte Einträge der Navigationsleiste verbergen oder anzeigen</string>
    <string name="set_desc_show_borders">Alle Lehrerkürzel, die angeklickt werden können, umranden</string>
    <string name="set_desc_alwaysNotification">Die Benachrichtigung kann nur noch manuell ausgeblendet werden</string>
    <string name="set_desc_two_notifs">Für jeden Tag eine eigene Benachrichtigung anzeigen</string>
    <string name="set_desc_alarm">Die Benachrichtigung zu einer bestimmten Uhrzeit anzeigen</string>
    <string name="set_desc_parents">Bestimmte Funktionen aktivieren, die v.a. für Eltern nützlich sind, z.B. ClaXss</string>
    <string name="set_desc_updates">Auf Aktualisierungen überprüfen</string>
    <string name="set_desc_check_background_updates">Automatisch im Hintergrund auf Aktualisierungen prüfen</string>
    <string name="set_desc_offline_mode">Bestimmte Dinge lokal speichern, damit die App ohne Internet funktioniert</string>
    <string name="set_desc_both">Wird, auch falls deaktiviert, immer beim ersten App-Start geladen!</string>
    <string name="seven_days_of_the_week">7 Tage die Woche</string>
    <string name="sevendays_setting">7 Tage pro Woche einstellen</string>
    <string name="integrate_substitution_in_timetable">Vertretungen im Stundenplan anzeigen</string>
    <string name="integrate_substitution_in_timetable_desc">Zum Editieren des Stundenplans besser ausschalten</string>
    <string name="integrate_substitution_in_timetable_on">Vertretungen ausblenden</string>
    <string name="open_all_settings">Alle Einstellungen öffnen</string>
    <string name="do_not_disturb_setting">Automatisches Stummschalten</string>
    <string name="do_not_disturb_settings_desc">Automatisch während des Unterrichts in den Nicht-Stören-Modus wechseln.</string>
    <string name="do_not_disturb_turn_off">Auch wieder auf laut stellen</string>
    <string name="show_times_instead_of_lessons">Uhrzeiten statt Stunden anzeigen</string>
    <string name="show_times_instead_of_lessons_desc">Zeige die Uhrzeiten anstatt der Stundenzahl an. Zum Beispiel 8:00 statt 1</string>
</resources>