<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Felix Hollederer
  ~     This file is part of GymWenApp.
  ~
  ~     GymWenApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     GymWenApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with GymWenApp.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:icon="@drawable/ic_view_week_black_24dp"
        android:key="sevendays"
        android:summary="@string/sevendays_setting"
        android:title="@string/seven_days_of_the_week" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:key="show_times"
        android:summary="@string/show_times_instead_of_lessons_desc"
        android:title="@string/show_times_instead_of_lessons" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_do_not_disturb_on_black_24dp"
        android:key="automatic_do_not_disturb"
        android:summary="@string/do_not_disturb_settings_desc"
        android:title="@string/do_not_disturb_setting" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="do_not_disturb_turn_off"
        android:title="@string/do_not_disturb_turn_off" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_slideshow_black_24dp"
        android:key="timetableNotif"
        android:title="@string/set_notification_isOn" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="alwaysNotification"
        android:summary="@string/set_desc_alwaysNotification"
        android:title="@string/set_notification_showAlways" />
    <Preference
        android:key="timetable_alarm"
        android:summary="@string/set_desc_alarm"
        android:title="@string/set_notification_alarm" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/ic_assignment_late_black_24dp"
        android:key="timetable_subs"
        android:summary="@string/integrate_substitution_in_timetable_desc"
        android:title="@string/integrate_substitution_in_timetable" />

    <EditTextPreference
        android:key="courses"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/set_desc_courses"
        android:title="@string/set_courses_title" />

    <Preference
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:key="allprefs"
        android:title="@string/open_all_settings" />
</PreferenceScreen>