<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_both"
        android:summary="@string/set_desc_both"
        android:title="@string/menu_both"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="show_days"
        android:title="@string/set_single_days"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="show_sections"
        android:title="@string/set_design_show_sections"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_filtered"
        android:title="@string/menu_filtered"
        app:iconSpaceReserved="true" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_unfiltered"
        android:title="@string/menu_unfiltered"
        app:iconSpaceReserved="true" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="show_no_sections"
        android:title="@string/set_design_no_sections"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_news"
        android:title="@string/menu_news"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="menu_shop"
        android:title="@string/menu_shop"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_call_office"
        android:title="@string/menu_call_office"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_navigation"
        android:title="@string/menu_navigation"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_public_transport"
        android:title="@string/menu_public_transport"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_notes"
        android:title="@string/menu_notes"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="menu_timetable"
        android:title="@string/menu_timetable"
        app:iconSpaceReserved="false" />

</PreferenceScreen>