<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="Allgemein"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="switch"
            android:entries="@array/theme_array"
            android:entryValues="@array/theme_array_values"
            android:key="theme"
            android:title="@string/set_choose_theme"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="accentColor"
            android:title="@string/color_accent"
            app:iconSpaceReserved="false"
            android:summary="@string/set_desc_accentColor" />
        <Preference
            android:key="primaryColor"
            android:title="@string/color_primary"
            app:iconSpaceReserved="false"
            android:summary="@string/set_desc_primaryColor" />
        <Preference
            android:title="Menüeinträge"
            app:fragment="com.asdoi.gymwen.ui.settingsFragments.SettingsFragmentHideMenuItems"
            app:iconSpaceReserved="false"
            android:summary="@string/set_desc_menu_items_fragment" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/set_substitution_category"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_borders"
            android:title="@string/set_show_borders"
            app:iconSpaceReserved="false"
            android:summary="@string/set_desc_show_borders" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_border_specific"
            android:title="@string/set_show_borders_specific"
            app:iconSpaceReserved="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="old_vertretung"
            android:title="@string/set_old_vertretung"
            app:iconSpaceReserved="false"
            android:summary="@string/set_desc_old_vertretung" />
    </PreferenceCategory>
</PreferenceScreen>