<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="showNotification"
        android:title="@string/set_notifiaction_isOn"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="alwaysNotification"
        android:title="@string/set_notification_showAlways"
        app:iconSpaceReserved="false"
        android:summary="@string/set_desc_alwaysNotification" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="two_notifs"
        android:title="@string/set_two_notifications"
        app:iconSpaceReserved="false"
        android:summary="@string/set_desc_two_notifs" />
    <Preference
        android:key="alarm"
        android:title="@string/set_notification_alarm"
        app:iconSpaceReserved="false"
        android:summary="@string/set_desc_alarm" />
</PreferenceScreen>