<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_substitutionIntegration"
        android:icon="@drawable/ic_assignment_late"
        android:orderInCategory="100"
        android:title="@string/integrate_substitution_in_timetable_on"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_timetable_backup"
        android:orderInCategory="100"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_timetable_restore"
        android:orderInCategory="100"
        android:title="@string/menu_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_timetable_delete_all"
        android:orderInCategory="100"
        android:title="@string/integrate_substitution_in_timetable_on"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
